Banner cmp and swiper integration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
         "camiseta",
-        "jasminewd"
+        "css",
+        "jasminewd",
+        "modules",
+        "node",
+        "node modules swiper css",
+        "swiper"
     ]
 }
