Knowing Angular Material, cool

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "camiseta",
         "css",
+        "devkit",
         "jasminewd",
         "modules",
         "node",
