Testing angular material

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,11 @@
         "camiseta",
         "css",
         "devkit",
+        "flexboxgrid",
         "jasminewd",
         "modules",
         "node",
+        "node modules flexboxgrid css",
         "node modules swiper css",
         "swiper"
     ]
