--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "angular-hammer": "^2.2.0",
+    "flexboxgrid": "^6.3.1",
     "rxjs": "~6.5.5",
     "swiper": "^5.4.5",
     "tslib": "^2.0.0",
